[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple key-value store"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
walkdir = "2.5"

[[bin]]
name = "kvs"
path = "src/bin/kvs.rs"

[lib]
name = "kvs"
path = "src/lib.rs"
