[package]
name = "kvs"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A simple key-value store"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.11"
sled = "0.34"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
walkdir = "2.5"
criterion = "0.5"
rand = "0.8"

[[bin]]
name = "kvs-server"
path = "src/bin/kvs-server.rs"

[[bin]]
name = "kvs-client"
path = "src/bin/kvs-client.rs"

[[bench]]
name = "engine_bench"
harness = false

[lib]
name = "kvs"
path = "src/lib.rs"
